updates work experience

--- a/index.html
+++ b/index.html
@@ -599,6 +599,22 @@
                     data-wow-delay="0.7s"
                   >
                     <h4>
+                      Intern Course Instructor at <a href="#">Dept. of Computer Science IAUOE</a>
+                    </h4>
+                    <div class="mh-eduyear">2021-2022</div>
+                    <span>Responsibility :</span>
+                    <ul class="work-responsibility">
+                      <li><i class="fa fa-circle"></i>Course Instructorship</li>
+                      <li><i class="fa fa-circle"></i>Administrative Assistance</li>
+                    </ul>
+                  </div>
+                  <!-- Education Institutes-->
+                  <div
+                    class="mh-work-item dark-bg wow fadeInUp"
+                    data-wow-duration="0.8s"
+                    data-wow-delay="0.7s"
+                  >
+                    <h4>
                       Technical Writer (Remote) At <a href="#">CometChat</a>
                     </h4>
                     <div class="mh-eduyear">2020-2021</div>
