adds buyme  coffee links

--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
                                 <li>Smart Contract Tests</li>
                                 <li>Smart Contracts Scripts</li>
                             </ul>
-                            <a href="#contactForm" class="btn btn-fill">Book Class</a>
+                            <a href="https://www.buymeacoffee.com/web3classes" target="_blank" class="btn btn-fill">Book Class</a>
                         </div>  
                     </div>                    
                     <div class="col-sm-12 col-md-4">
@@ -898,7 +898,7 @@
                                 <li>Testing and Scripting</li>
                                 <li>Mentorship Tips</li>
                             </ul>
-                            <a href="#contactForm" class="btn btn-fill">Book Class</a>
+                            <a href="https://www.buymeacoffee.com/web3classes" target="_blank" class="btn btn-fill">Book Class</a>
                         </div>  
                     </div>
                     <div class="col-sm-12 col-md-4">
@@ -959,52 +959,6 @@
     -->
     <footer class="mh-footer" id="mh-contact">
       <div class="map-image image-bg">
-        <div class="container">
-          <div class="col-md-6 mx-auto wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-            <form method="POST"
-              action="https://checkout.flutterwave.com/v3/hosted/pay"
-              id="contactForm" class="single-form quate-form wow fadeInUp">
-                <div id="msgSubmit" class="h3 text-center hidden"></div>
-                <div class="row">
-                    <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                      <h3>Make Payment</h3>
-                      <p>After making payment, schedule a class with me on calendarly.</p>
-                    </div>
-                    <div class="col-sm-12">
-                        <input name="customer[name]" class="contact-name form-control" id="name" type="text" placeholder="Full Name" required>
-                    </div>
-                    <div class="col-sm-12">
-                        <input name="customer[email]" class="contact-subject form-control" id="email" type="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="col-sm-12">
-                      <select name="amount" id="amount" class="contact-subject form-control" placeholder="Select Plan" Place required>
-                        <option value="" selected disabled hidden>Choose a class</option>
-                        <option style="color: black;" value="25">Beginner class</option>
-                        <option style="color: black;" value="47">Intermediate class</option>
-                      </select>
-                    </div>
-                    <input type="hidden" name="public_key" value="FLWPUBK-d24d68d5069fab189f99553783986392-X" />
-                    <input type="hidden" name="tx_ref" value="daltonictx-019203" />
-                    <input type="hidden" name="currency" value="USD" />
-                    <input type="hidden" name="meta[token]" value="54" />
-                    <input type="hidden" name="redirect_url" value="https://daltonic.github.io/" />
-                    <input type="hidden" name="customizations[title]" value="Daltonic Tutoring Classes" />
-                    <input type="hidden" name="customizations[description]" value="Dayment for an online class session" />
-                    <input type="hidden" name="customizations[logo]" value="https://daltonic.github.io/assets/images/hero.jpg" />
-                    <!-- Subject Button -->
-                    <div class="d-flex justify-content-between btn-form col-sm-12">
-                        <button type="submit" id="start-payment-button" class="btn btn-fill">Pay Now</button>
-                        <a
-                          href="https://calendly.com/darlingtongospel/60min"
-                          target="_blank"
-                          class="btn btn-border wow fadeInUp mt-3 ml-3"
-                          data-wow-duration="0.8s"
-                          data-wow-delay="0.4s"
-                          >Schedule Class</a>
-                    </div>
-                </div>
-            </form>
-        </div>
             <div
               class="col-sm-12 mx-auto mh-copyright wow fadeInUp"
               data-wow-duration="0.8s"
