updates portfolio about

--- a/index.html
+++ b/index.html
@@ -303,18 +303,16 @@
                 data-wow-duration="0.8s"
                 data-wow-delay="0.2s"
               >
-                Gospel Darlington kick-started his journey as a software engineer in 2016.
-                Over the years, he has grown full-blown skills in
-                JavaScript stacks such as React,
-                ReactNative, VueJs, and now <span class="mh-eduyear">blockchain.</span>
+                Gospel Darlington is a full-stack blockchain developer
+                with 6+ years of experience in the software
+                development industry.
                 <br /><br />
-                He is currently freelancing, building apps for clients,
-                and writing technical tutorials teaching
-                others how to do what he does.
+                By combining Software Development, writing, and teaching,
+                he demonstrates how to build decentralized applications
+                on EVM-compatible blockchain networks.
                 <br /><br />
-                Gospel Darlington is open and available to hear from you.
-                You can reach him on LinkedIn, Facebook,
-                Github, or on his website.
+                His stacks include JavaScript, React, Vue, Angular,
+                Node, React Native, NextJs, Solidity, and more.
               </p>
               <div
                 class="mh-about-tag wow fadeInUp"
