updates the booking links

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 class="btn btn-fill wow fadeInUp mt-3"
                 data-wow-duration="0.8s"
                 data-wow-delay="0.4s"
-                >Hire Me</a>
+                >Consult Me</a>
               <a
                 href="#mh-pricing"
                 class="btn btn-border wow fadeInUp mt-3 ml-3"
@@ -674,7 +674,7 @@
               class="btn btn-fill wow fadeInUp mt-3"
               data-wow-duration="0.8s"
               data-wow-delay="0.4s"
-              >Hire Me</a>
+              >Consult Me</a>
           </div>
         </div>
       </div>
@@ -868,42 +868,42 @@
                 <div class="row section-separator">
                     <div class="col-sm-12 section-title" data-wow-duration="0.8s" data-wow-delay="0.2s">
                         <h3>Pricing Table</h3>
-                    </div>
-                    <div class="col-sm-12 col-md-4">
-                        <div class="mh-pricing dark-bg shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                            <i class="fa fa-calendar"></i>
-                            <h4>Beginner Classes</h4>
-                            <p>What you'll learn:</p>
-                            <h5>$25 per hour</h5>
-                            <ul>
-                                <li>Solidity Basics</li>
-                                <li>Smart Contract Development</li>
-                                <li>Smart Contract Tests</li>
-                                <li>Smart Contracts Scripts</li>
-                            </ul>
-                            <a href="https://www.buymeacoffee.com/web3classes" target="_blank" class="btn btn-fill">Book Class</a>
-                        </div>  
-                    </div>                    
+                    </div>                   
                     <div class="col-sm-12 col-md-4">
                         <div class="mh-pricing dark-bg shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                             <i class="fa fa-file"></i>
-                            <h4>Intermediate Classes</h4>
-                            <p>What you'll learn:</p>
+                            <h4>Web 3.0 Classes</h4>
+                            <p>You want a private class with me?</p>
                             <h5>$47 per hour</h5>
                             <ul>
-                                <li>Smart Contract with Solidity</li>
+                                <li>Smart Contract Development</li>
                                 <li>DApp Development with React</li>
                                 <li>Testing and Scripting</li>
                                 <li>Mentorship Tips</li>
                             </ul>
-                            <a href="https://www.buymeacoffee.com/web3classes" target="_blank" class="btn btn-fill">Book Class</a>
+                            <a href="https://www.buymeacoffee.com/web3classes/e/74614" target="_blank" class="btn btn-fill">Book Class</a>
                         </div>  
                     </div>
+                    <div class="col-sm-12 col-md-4">
+                      <div class="mh-pricing dark-bg shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                        ``<i class="fa fa-calendar"></i>
+                          <h4>Consultancy</h4>
+                          <p>Do you have a unique request?</p>
+                          <h5>$ Reach me for:</h5>
+                          <ul>
+                              <li>Help me resolve my code</li>
+                              <li>Advice me on a Web3 Project</li>
+                              <li>Design me a Web3 Project</li>
+                              <li>Audit my smart contract</li>
+                          </ul>
+                          <a href="https://www.buymeacoffee.com/web3classes/e/78962" target="_blank" class="btn btn-fill">Book a Session</a>
+                      </div>  
+                  </div>
                     <div class="col-sm-12 col-md-4">
                         <div class="mh-pricing dark-bg shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                             <i class="fa fa-hourglass"></i>
                             <h4>Project Development</h4>
-                            <p>I am open for any other business:</p>
+                            <p>You want me to build for you?</p>
                             <h5>$ Partnership</h5>
                             <ul>
                                 <li>Build me a Smart Contract</li>
