--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                         ``<i class="fa fa-calendar"></i>
                           <h4>Consultancy</h4>
                           <p>Do you have a unique request?</p>
-                          <h5>$ Reach me for:</h5>
+                          <h5>$ Reach me for</h5>
                           <ul>
                               <li>Help me resolve my code</li>
                               <li>Advice me on a Web3 Project</li>
