Indicate fee for consultation

--- a/index.html
+++ b/index.html
@@ -889,14 +889,14 @@
                         ``<i class="fa fa-calendar"></i>
                           <h4>Consultancy</h4>
                           <p>Do you have a unique request?</p>
-                          <h5>$ Reach me for</h5>
+                          <h5>$55 per hour</h5>
                           <ul>
                               <li>Help me resolve my code</li>
                               <li>Advice me on a Web3 Project</li>
                               <li>Design me a Web3 Project</li>
                               <li>Audit my smart contract</li>
                           </ul>
-                          <a href="https://www.buymeacoffee.com/web3classes/e/78962" target="_blank" class="btn btn-fill">Book a Session</a>
+                          <a href="https://www.buymeacoffee.com/web3classes/e/78962" target="_blank" class="btn btn-fill">Book Sessions</a>
                       </div>  
                   </div>
                     <div class="col-sm-12 col-md-4">
