removes some typos

--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
                     </div>
                     <div class="col-sm-12 col-md-4">
                       <div class="mh-pricing dark-bg shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                        ``<i class="fa fa-calendar"></i>
+                        <i class="fa fa-calendar"></i>
                           <h4>Consultancy</h4>
                           <p>Do you have a unique request?</p>
                           <h5>$55 per hour</h5>
@@ -896,7 +896,7 @@
                               <li>Design me a Web3 Project</li>
                               <li>Audit my smart contract</li>
                           </ul>
-                          <a href="https://www.buymeacoffee.com/web3classes/e/78962" target="_blank" class="btn btn-fill">Book Sessions</a>
+                          <a href="https://www.buymeacoffee.com/web3classes/e/78962" target="_blank" class="btn btn-fill">Book Session</a>
                       </div>  
                   </div>
                     <div class="col-sm-12 col-md-4">
