Adds youtube as a service

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
     -->
     <section class="mh-service" id="mh-service">
         <div class="container">
-            <div class="row section-separator">
+            <div class="row d-flex justify-content-center section-separator">
                 <div class="col-sm-12 text-center section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                     <h2>What I do</h2>
                 </div>
@@ -383,6 +383,15 @@
                           Do you want to learn coding in a one-on-one mentorship session? I will privately coach you from a complete beginner to a master at a flexible schedule.
                         </p>
                     </div>
+                </div>
+                <div class="col-md-4 col-sm-12 mt-4 text-center">
+                  <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
+                      <i style="color: red;" class="fab fa-2x fa-youtube iron-color"></i>
+                      <h3>YouTube Creator</h3>
+                      <p>
+                        I produce web3 video content for YouTube, Udemey, and other course content marketplaces.
+                      </p>
+                  </div>
                 </div>
             </div>
             <div class="d-flex justify-content-center">
